pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxDuplicateProperty1.pkl
local source {
  foo = 1
}

res {
  ...source
  foo = 2
}
